# TodoDesktop

./: README.md
TodoDesktopFiles/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  todocontainerwidget.cpp  todocontainerwidget.h  todoitemwidget.cpp  todoitemwidget.h  todomanager.cpp  todomanager.h
